--- a/electron/package.json
+++ b/electron/package.json
@@ -2,7 +2,7 @@
   "name": "rrox",
   "productName": "RailroadsOnline Extended",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "RailroadsOnline Extended tool for RailroadsOnlineGame",
   "author": "_tom()",
   "main": ".webpack/main",
@@ -32,6 +32,7 @@
     "@electron-forge/cli": "6.0.0-beta.61",
     "@electron-forge/maker-squirrel": "6.0.0-beta.61",
     "@electron-forge/plugin-webpack": "6.0.0-beta.61",
+    "@electron-forge/publisher-github": "^6.0.0-beta.61",
     "@types/ffi-napi": "^4.0.4",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
