--- a/electron/package.json
+++ b/electron/package.json
@@ -70,10 +70,12 @@
     "@hot-loader/react-dom": "^17.0.1",
     "antd": "^4.17.2",
     "async-mutex": "^0.3.2",
+    "axios": "^0.24.0",
     "electron-log": "^4.4.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
     "ffi-napi": "^4.0.3",
+    "form-data": "^4.0.0",
     "history": "^5.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
