--- a/electron/package.json
+++ b/electron/package.json
@@ -69,6 +69,7 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@hot-loader/react-dom": "^17.0.1",
+    "ant-design-draggable-modal": "^1.0.0",
     "antd": "^4.17.2",
     "async-mutex": "^0.3.2",
     "axios": "^0.24.0",
