--- a/electron/package.json
+++ b/electron/package.json
@@ -84,6 +84,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "ref-struct-di": "^1.1.1",
+    "socket.io-client": "^4.4.0",
     "svg-pan-zoom": "^3.6.1",
     "update-electron-app": "^2.0.1"
   }
