--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "socket.io-client": "^4.4.0"
   }
 }
