--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -41,6 +41,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "eventemitter2": "^6.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "socket.io-client": "^4.4.0"
