Implemented build mode

--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -37,6 +37,7 @@
     "@electron-forge/maker-squirrel": "6.0.0-beta.61",
     "@electron-forge/plugin-webpack": "6.0.0-beta.61",
     "@electron-forge/publisher-github": "^6.0.0-beta.61",
+    "@types/bezier-js": "^4.1.0",
     "@types/ffi-napi": "^4.0.4",
     "@types/node": "^16.11.6",
     "@types/react": "^17.0.34",
@@ -66,13 +67,14 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@hot-loader/react-dom": "^17.0.1",
-    "@rrox/types": "^1.6.2",
     "@rrox/assets": "^1.6.2",
     "@rrox/components": "^1.6.2",
+    "@rrox/types": "^1.6.2",
     "ant-design-draggable-modal": "^1.0.0",
     "antd": "^4.17.2",
     "async-mutex": "^0.3.2",
     "axios": "^0.24.0",
+    "bezier-js": "^5.1.0",
     "electron-log": "^4.4.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
