--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -10,18 +10,25 @@
         "url": "https://github.com/tom-90/RROx.git"
     },
     "devDependencies": {
+        "@types/d3": "^7.1.0",
         "@types/leaflet": "^1.7.7",
+        "@types/leaflet-curve": "^0.1.2",
+        "@types/leaflet-draw": "^1.0.5",
         "@types/leaflet-imageoverlay-rotated": "^0.1.4",
         "@types/react": "^17.0.34",
         "typescript": "^4.4.4"
     },
     "dependencies": {
-        "@rrox/types": "^1.6.2",
         "@rrox/assets": "^1.6.2",
+        "@rrox/types": "^1.6.2",
         "ant-design-draggable-modal": "^1.0.0",
         "antd": "^4.17.2",
+        "d3": "^7.3.0",
         "leaflet": "^1.7.1",
+        "leaflet-curve": "^1.0.0",
+        "leaflet-draw": "^1.0.4",
         "leaflet-imageoverlay-rotated": "^0.2.1",
+        "leaflet-snap": "^0.0.4",
         "react": "^17.0.2",
         "react-leaflet": "^3.2.2"
     }
