--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -42,8 +42,10 @@
   },
   "dependencies": {
     "eventemitter2": "^6.4.5",
+    "konva": "^8.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-konva": "^17.0.2-5",
     "socket.io-client": "^4.4.0"
   }
 }
