--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -69,6 +69,7 @@
     "@hot-loader/react-dom": "^17.0.1",
     "@rrox/assets": "^1.6.2",
     "@rrox/components": "^1.6.2",
+    "@rrox/utils": "^1.6.2",
     "@rrox/types": "^1.6.2",
     "ant-design-draggable-modal": "^1.0.0",
     "antd": "^4.17.2",
