--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -69,19 +69,22 @@
     "@hot-loader/react-dom": "^17.0.1",
     "@rrox/assets": "^1.6.2",
     "@rrox/components": "^1.6.2",
-    "@rrox/utils": "^1.6.2",
     "@rrox/types": "^1.6.2",
+    "@rrox/utils": "^1.6.2",
     "ant-design-draggable-modal": "^1.0.0",
     "antd": "^4.17.2",
     "async-mutex": "^0.3.2",
     "axios": "^0.24.0",
     "bezier-js": "^5.1.0",
+    "copy-webpack-plugin": "^10.2.1",
     "electron-log": "^4.4.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
     "ffi-napi": "^4.0.3",
     "form-data": "^4.0.0",
     "history": "^5.1.0",
+    "iohook": "^0.9.3",
+    "keycode": "^2.2.1",
     "quaternion": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
