--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -46,6 +46,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-konva": "^17.0.2-5",
+    "react-svg-pan-zoom": "^3.11.0",
     "socket.io-client": "^4.4.0"
   }
 }
