Added API for layouts

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -15,6 +15,7 @@
     "@socket.io/admin-ui": "^0.2.0",
     "cross-env": "^7.0.3",
     "express": "^4.17.2",
+    "express-validator": "^6.14.0",
     "socket.io": "^4.4.0"
   },
   "devDependencies": {
