--- a/packages/server/docker-compose.yml
+++ b/packages/server/docker-compose.yml
@@ -17,9 +17,11 @@ services:
             dockerfile: Dockerfile.dev
         volumes:
             - ../..:/var/www/app
+            - layoutsdata:/data/layouts
         environment:
             - SOCKETIO_ADMIN_USERNAME=admin
             - SOCKETIO_ADMIN_PASSWORD=$$2a$$12$$qP4IjY2iFzSsC5sMfIcVduc8rhlwZxzw8.xm9/kGlEq4Z1M50E39C
+            - LAYOUTS_DATA_DIR=/data/layouts
         command: npm run dev:start
         labels:
             - "traefik.enable=true"
@@ -27,3 +29,6 @@ services:
             - "traefik.http.routers.rrox.entrypoints=web"
             - traefik.http.services.rrox.loadBalancer.sticky.cookie.name=rrox_id
             - traefik.http.services.rrox.loadBalancer.sticky.cookie.httpOnly=true
+
+volumes:
+  layoutsdata:
