--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -41,6 +41,7 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "canvg": "^3.0.10",
     "eventemitter2": "^6.4.5",
     "konva": "^8.3.2",
     "react": "^17.0.2",
