--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -74,6 +74,8 @@
     "@rrox/components": "^1.6.2",
     "@rrox/types": "^1.6.2",
     "@rrox/utils": "^1.6.2",
+    "ajv": "^8.11.0",
+    "ajv-formats": "^2.1.1",
     "ant-design-draggable-modal": "^1.0.0",
     "antd": "^4.17.2",
     "async-mutex": "^0.3.2",
@@ -95,7 +97,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
     "ref-struct-di": "^1.1.1",
-    "semver": "^7.3.5",
+    "semver": "^7.3.7",
     "socket.io-client": "^4.4.0",
     "svg-pan-zoom": "^3.6.1",
     "update-electron-app": "^2.0.1"
