--- a/plugins/world/package.json
+++ b/plugins/world/package.json
@@ -1,7 +1,6 @@
 {
     "name": "@rrox/world",
-    "private": true,
-    "version": "1.6.2",
+    "version": "1.6.3",
     "description": "RailroadsOnline Extended World Loader",
     "author": "_tom()",
     "rrox": {
@@ -12,11 +11,14 @@
         "type": "git",
         "url": "https://github.com/tom-90/RROx.git"
     },
+    "publishConfig": {
+        "registry": "http://localhost:4873/"
+    },
     "devDependencies": {
+        "@monaco-editor/react": "^4.3.1",
         "@rrox/api": "^1.6.2",
         "@types/react-inspector": "^4.0.2",
         "console-feed": "^3.3.0",
-        "@monaco-editor/react": "^4.3.1",
         "monaco-editor": "^0.33.0",
         "react": "^17.0.2",
         "react-inspector": "^5.1.1",
@@ -26,6 +28,5 @@
     "scripts": {
         "dev": "webpack -c ./configs/webpack.config.js --mode=development --watch"
     },
-    "dependencies": {
-    }
+    "dependencies": {}
 }
