--- a/plugins/world/package.json
+++ b/plugins/world/package.json
@@ -11,6 +11,9 @@
         "type": "git",
         "url": "https://github.com/tom-90/RROx.git"
     },
+    "files": [
+        "dist"
+    ],
     "publishConfig": {
         "registry": "http://localhost:4873/"
     },
@@ -23,9 +26,11 @@
         "react": "^17.0.2",
         "react-inspector": "^5.1.1",
         "typescript": "^4.4.4",
-        "webpack": "^5.69.1"
+        "webpack": "^5.69.1",
+        "webpack-cli": "^4.9.2"
     },
     "scripts": {
+        "prepack": "webpack -c ./configs/webpack.config.js --mode=production",
         "dev": "webpack -c ./configs/webpack.config.js --mode=development --watch"
     },
     "dependencies": {}
