Implemented plugin loader

--- a/plugins/map/tsconfig.json
+++ b/plugins/map/tsconfig.json
@@ -13,7 +13,12 @@
     "baseUrl": ".",
     "outDir": "dist",
     "moduleResolution": "node",
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "typeRoots": [
+      "src/types",
+      "node_modules/@types"
+    ],
+    "types": ["webpack-env"]
   },
   "include": ["src/**/*"]
 }
