--- a/packages/base-ui/package.json
+++ b/packages/base-ui/package.json
@@ -4,23 +4,24 @@
     "version": "1.6.2",
     "description": "RailroadsOnline Extended Base UI",
     "author": "_tom()",
-    "rrox": {
-        "controller": "dist/controller/controller.js",
-        "renderer": "dist/renderer/renderer.js"
-    },
+    "main": "src/index.tsx",
     "repository": {
         "type": "git",
         "url": "https://github.com/tom-90/RROx.git"
     },
     "devDependencies": {
         "typescript": "^4.4.4",
-        "react": "^17.0.2",
         "webpack": "^5.69.1",
-        "@rrox/api": "^1.6.2"
+        "webpack-cli": "^4.9.2"
     },
     "scripts": {
         "dev": "webpack -c ./configs/webpack.config.js --mode=development --watch"
     },
     "dependencies": {
+        "@rrox/api": "^1.6.2",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.0.2",
+        "react-router": "^6.0.2"
     }
 }
