--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -39,6 +39,7 @@
     "@electron-forge/publisher-github": "^6.0.0-beta.61",
     "@types/bezier-js": "^4.1.0",
     "@types/ffi-napi": "^4.0.4",
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "^16.11.6",
     "@types/path-browserify": "^1.0.0",
     "@types/react": "^17.0.34",
@@ -48,6 +49,7 @@
     "@types/react-svg-pan-zoom": "^3.3.4",
     "@types/ref-struct-di": "^1.1.5",
     "@types/semver": "^7.3.9",
+    "@types/tar": "^6.1.1",
     "@types/webpack-env": "^1.16.3",
     "@vercel/webpack-asset-relocator-loader": "^1.7.0",
     "@welldone-software/why-did-you-render": "^6.2.3",
@@ -71,6 +73,7 @@
     "@hot-loader/react-dom": "^17.0.1",
     "@rrox/api": "^1.6.2",
     "@rrox/assets": "^1.6.2",
+    "@rrox/base-ui": "^1.6.2",
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
     "ant-design-draggable-modal": "^1.0.0",
@@ -83,16 +86,20 @@
     "electron-log": "^4.4.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
+    "eventemitter2": "^6.4.5",
     "ffi-napi": "^4.0.3",
     "form-data": "^4.0.0",
+    "fs-extra": "^10.1.0",
     "history": "^5.1.0",
     "iohook": "^0.9.3",
     "keycode": "^2.2.1",
+    "node-fetch": "^3.2.3",
     "path-browserify": "^1.0.1",
     "quaternion": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.0.2",
+    "react-router": "^6.0.2",
     "ref-struct-di": "^1.1.1",
     "semver": "^7.3.7",
     "socket.io-client": "^4.4.0",
