--- a/plugins/devtools/package.json
+++ b/plugins/devtools/package.json
@@ -1,6 +1,5 @@
 {
     "name": "@rrox/devtools",
-    "private": true,
     "version": "1.6.2",
     "description": "RailroadsOnline Extended Developer Tools",
     "author": "_tom()",
@@ -8,15 +7,21 @@
         "controller": "dist/controller/controller.js",
         "renderer": "dist/renderer/renderer.js"
     },
+    "files": [
+        "dist"
+    ],
+    "publishConfig": {
+        "registry": "http://localhost:4873/"
+    },
     "repository": {
         "type": "git",
         "url": "https://github.com/tom-90/RROx.git"
     },
     "devDependencies": {
+        "@monaco-editor/react": "^4.3.1",
         "@rrox/api": "^1.6.2",
         "@types/react-inspector": "^4.0.2",
         "console-feed": "^3.3.0",
-        "@monaco-editor/react": "^4.3.1",
         "monaco-editor": "^0.33.0",
         "react": "^17.0.2",
         "react-inspector": "^5.1.1",
@@ -24,8 +29,10 @@
         "webpack": "^5.69.1"
     },
     "scripts": {
+        "prepack": "webpack -c ./configs/webpack.config.js --mode=production",
         "dev": "webpack -c ./configs/webpack.config.js --mode=development --watch"
     },
     "dependencies": {
+        "webpack-cli": "^4.9.2"
     }
 }
