--- a/packages/registry-cdn/package.json
+++ b/packages/registry-cdn/package.json
@@ -27,6 +27,7 @@
     "date-fns": "^1.30.1",
     "etag": "^1.8.1",
     "express": "^4.16.4",
+    "fs-extra": "^10.1.0",
     "gunzip-maybe": "^1.4.1",
     "highlight.js": "^9.15.8",
     "isomorphic-fetch": "^2.2.1",
