--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -89,6 +89,7 @@
     "ffi-napi": "^4.0.3",
     "form-data": "^4.0.0",
     "fs-extra": "^10.1.0",
+    "github-markdown-css": "^5.1.0",
     "history": "^5.1.0",
     "iohook": "^0.9.3",
     "keycode": "^2.2.1",
@@ -97,8 +98,8 @@
     "quaternion": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.0.2",
     "react-router": "^6.0.2",
+    "react-router-dom": "^6.0.2",
     "ref-struct-di": "^1.1.1",
     "semver": "^7.3.7",
     "socket.io-client": "^4.4.0",
