Moved registry and CDN to server

--- a/.yarnrc
+++ b/.yarnrc
@@ -1,2 +1,2 @@
-"@rrox:registry" "localhost:4873"
-"@rrox-plugins:registry" "localhost:4873"
+"@rrox:registry" "https://rrox-registry.tom90.nl"
+"@rrox-plugins:registry" "https://rrox-registry.tom90.nl"
