--- a/packages/registry-cdn/package.json
+++ b/packages/registry-cdn/package.json
@@ -44,6 +44,7 @@
     "semver": "^5.6.0",
     "sort-by": "^1.2.0",
     "sri-toolbox": "^0.2.0",
+    "tar": "^6.1.11",
     "tar-stream": "^1.6.2",
     "tempy": "^0.3.0",
     "validate-npm-package-name": "^3.0.0",
@@ -51,7 +52,6 @@
     "whatwg-url": "^7.0.0"
   },
   "devDependencies": {
-    "@ampproject/rollup-plugin-closure-compiler": "^0.8.5",
     "@babel/preset-env": "^7.2.0",
     "@babel/preset-react": "^7.0.0",
     "@typescript-eslint/eslint-plugin": "2.x",
