--- a/plugins/autosave/package.json
+++ b/plugins/autosave/package.json
@@ -15,7 +15,7 @@
         "dist"
     ],
     "publishConfig": {
-        "registry": "http://localhost:4873/"
+        "registry": "https://rrox-registry.tom90.nl"
     },
     "devDependencies": {
         "@rrox/api": "^1.6.2",
