--- a/plugins/devtools/package.json
+++ b/plugins/devtools/package.json
@@ -11,7 +11,7 @@
         "dist"
     ],
     "publishConfig": {
-        "registry": "http://localhost:4873/"
+        "registry": "https://rrox-registry.tom90.nl"
     },
     "repository": {
         "type": "git",
