--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -16,6 +16,7 @@
     "dependencies": {
         "deep-diff": "^1.0.2",
         "react": "^17.0.2",
-        "reflect-metadata": "^0.1.13"
+        "reflect-metadata": "^0.1.13",
+        "ts-toolbelt": "^9.6.0"
     }
 }
