--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -1,19 +1,22 @@
 {
-    "name": "@rrox/renderer",
-    "version": "1.13.0",
-    "description": "RailroadsOnline Extended renderer utilities",
-    "author": "_tom()",
-    "main": "src/index.ts",
-    "license": "MIT",
-    "repository": {
-      "type": "git",
-      "url": "https://github.com/tom-90/RROx.git"
-    },
-    "scripts": {},
-    "devDependencies": {},
-    "dependencies": {
-      "ajv": "^8.11.0",
-      "ajv-formats": "^2.1.1",
-      "react-router-dom": "^6.0.2"
-    }
+  "name": "@rrox/renderer",
+  "version": "1.13.0",
+  "description": "RailroadsOnline Extended renderer utilities",
+  "author": "_tom()",
+  "main": "src/index.ts",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/tom-90/RROx.git"
+  },
+  "scripts": {},
+  "devDependencies": {
+    "@types/deepmerge": "^2.2.0"
+  },
+  "dependencies": {
+    "ajv": "^8.11.0",
+    "ajv-formats": "^2.1.1",
+    "deepmerge": "^4.2.2",
+    "react-router-dom": "^6.0.2"
   }
+}
