--- a/plugins/world/package.json
+++ b/plugins/world/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@rrox/world",
-    "version": "1.6.2",
+    "name": "@rrox-plugins/world",
+    "version": "1.0.0",
     "description": "World Loader Plugin",
     "author": "_tom()",
     "rrox": {
@@ -30,7 +30,7 @@
         "webpack-cli": "^4.9.2"
     },
     "scripts": {
-        "prepack": "webpack -c ./configs/webpack.config.js --mode=production",
+        "prepack": "rm -rf dist && webpack -c ./configs/webpack.config.js --mode=production",
         "dev": "webpack -c ./configs/webpack.config.js --mode=development --watch"
     },
     "dependencies": {}
