--- a/plugins/map/package.json
+++ b/plugins/map/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "@rrox/map",
-    "version": "1.6.2",
+    "name": "@rrox-plugins/map",
+    "version": "1.0.0",
     "description": "Map Plugin",
     "author": "_tom()",
     "rrox": {
         "controller": "dist/controller/controller.js",
         "renderer": "dist/renderer/renderer.js",
         "pluginDependencies": [
-            "@rrox/world"
+            "@rrox-plugins/world"
         ]
     },
     "files": [
@@ -30,26 +30,26 @@
         "@types/leaflet-imageoverlay-rotated": "^0.1.4",
         "@types/react": "^18.0.5",
         "@types/react-inspector": "^4.0.2",
-        "console-feed": "^3.3.0",
-        "monaco-editor": "^0.33.0",
-        "react": "^17.0.2",
-        "react-inspector": "^5.1.1",
-        "typescript": "^4.4.4",
-        "webpack": "^5.69.1",
         "ant-design-draggable-modal": "^1.0.0",
+        "console-feed": "^3.3.0",
         "leaflet": "^1.7.1",
         "leaflet-curve": "^1.0.0",
         "leaflet-draw": "^1.0.4",
         "leaflet-imageoverlay-rotated": "^0.2.1",
         "leaflet-snap": "^0.0.4",
+        "monaco-editor": "^0.33.0",
+        "react": "^17.0.2",
+        "react-inspector": "^5.1.1",
         "react-leaflet": "^3.2.5",
+        "typescript": "^4.4.4",
+        "webpack": "^5.69.1",
         "webpack-cli": "^4.9.2"
     },
     "scripts": {
-        "prepack": "webpack -c ./configs/webpack.config.js --mode=production",
+        "prepack": "rm -rf dist && webpack -c ./configs/webpack.config.js --mode=production",
         "dev": "webpack -c ./configs/webpack.config.js --mode=development --watch"
     },
     "dependencies": {
-        "@rrox/world": "1.6.2"
+        "@rrox-plugins/world": "1.6.2"
     }
 }
