--- a/plugins/devtools/package.json
+++ b/plugins/devtools/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "@rrox/devtools",
-    "version": "1.6.2",
+    "name": "@rrox-plugins/devtools",
+    "version": "1.0.0",
     "description": "Developer Tools Plugin",
     "author": "_tom()",
     "rrox": {
@@ -29,7 +29,7 @@
         "webpack": "^5.69.1"
     },
     "scripts": {
-        "prepack": "webpack -c ./configs/webpack.config.js --mode=production",
+        "prepack": "rm -rf dist && webpack -c ./configs/webpack.config.js --mode=production",
         "dev": "webpack -c ./configs/webpack.config.js --mode=development --watch"
     },
     "dependencies": {
