--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -14,6 +14,7 @@
     "@types/deepmerge": "^2.2.0"
   },
   "dependencies": {
+    "@rrox/base-ui": "^1.6.2",
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
     "deepmerge": "^4.2.2",
