--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -21,7 +21,9 @@
     "socket.io": "^4.4.0"
   },
   "devDependencies": {
+    "@types/deep-diff": "^1.0.1",
     "@types/express": "^4.17.13",
+    "@types/jsonwebtoken": "^8.5.8",
     "@types/node": "^17.0.2",
     "concurrently": "^7.1.0",
     "nodemon": "^2.0.15",
