--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -60,6 +60,7 @@
     "@ant-design/icons": "^4.7.0",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.63",
     "@electron-forge/maker-wix": "^6.0.0-beta.63",
+    "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "@electron-forge/publisher-electron-release-server": "^6.0.0-beta.63",
     "@hot-loader/react-dom": "^17.0.1",
     "@rrox/api": "^1.6.2",
