--- a/plugins/devtools/package.json
+++ b/plugins/devtools/package.json
@@ -24,15 +24,19 @@
         "console-feed": "^3.3.0",
         "monaco-editor": "^0.33.0",
         "react": "^17.0.2",
+        "react-router-dom": "^6.0.2",
         "react-inspector": "^5.1.1",
         "typescript": "^4.4.4",
         "webpack": "^5.69.1"
     },
     "scripts": {
         "prepack": " webpack -c ./configs/webpack.config.js --mode=production",
-        "dev": "webpack -c ./configs/webpack.config.js --mode=development --watch"
+        "dev": "webpack -c ./configs/webpack.config.js --mode=development --watch",
+        "rrox": "rrox"
     },
     "dependencies": {
+        "@rrox/base-ui": "^1.6.2",
+        "@rrox/plugin": "^1.0.0",
         "webpack-cli": "^4.9.2"
     }
 }
