General refactoring of repository

--- a/package.json
+++ b/package.json
@@ -7,15 +7,8 @@
         "packages/*",
         "plugins/*"
     ],
-    "iohook": {
-      "targets": [
-        "node-88"
-      ]
-    },
     "scripts": {
-        "postinstall": "patch-package && yarn run postinstall:iohook && yarn run postinstall:dll-inject",
-        "postinstall:iohook": "node packages/electron/tools/iohook/postinstall.js",
-        "postinstall:dll-inject": "cd node_modules/dll-inject && yarn compile --target=15.3.0 --arch=x64 --dist-url=https://electronjs.org/headers"
+        "postinstall": "patch-package"
     },
      "devDependencies": {
         "patch-package": "^6.4.7",
