--- a/packages/electron/package.json
+++ b/packages/electron/package.json
@@ -11,8 +11,9 @@
     "url": "https://github.com/tom-90/RROx.git"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=development electron-forge start",
-    "debug": "cross-env NODE_ENV=development electron-forge start --inspect-electron",
+    "start": "cross-env NODE_ENV=development yarn rebuild-native && electron-forge start",
+    "debug": "cross-env NODE_ENV=development yarn rebuild-native && electron-forge start --inspect-electron",
+    "rebuild-native": "cd ../../ && yarn electron-rebuild -m packages/electron --version 15.3.0",
     "package": "electron-forge package",
     "make": "electron-forge make",
     "publish": "electron-forge publish",
@@ -25,23 +26,20 @@
     "@electron-forge/cli": "6.0.0-beta.61",
     "@electron-forge/plugin-webpack": "6.0.0-beta.61",
     "@electron-forge/publisher-github": "^6.0.0-beta.61",
-    "@types/bezier-js": "^4.1.0",
+    "@types/deepmerge": "^2.2.0",
     "@types/ffi-napi": "^4.0.4",
     "@types/fs-extra": "^9.0.13",
     "@types/node": "^16.11.6",
-    "@types/path-browserify": "^1.0.0",
-    "@types/react": "^17.0.34",
+    "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "@types/react-router": "^5.1.17",
     "@types/react-router-dom": "^5.3.2",
-    "@types/react-svg-pan-zoom": "^3.3.4",
     "@types/ref-struct-di": "^1.1.5",
     "@types/semver": "^7.3.9",
     "@types/tar": "^6.1.1",
     "@types/webpack-env": "^1.16.3",
     "@vercel/webpack-asset-relocator-loader": "^1.7.0",
     "@welldone-software/why-did-you-render": "^6.2.3",
-    "classnames": "^2.3.1",
     "cross-env": "^7.0.3",
     "css-loader": "^6.5.1",
     "electron": "^15.3.0",
@@ -63,39 +61,36 @@
     "@electron-forge/maker-zip": "^6.0.0-beta.63",
     "@electron-forge/publisher-electron-release-server": "^6.0.0-beta.63",
     "@hot-loader/react-dom": "^17.0.1",
-    "@rrox/api": "^1.6.2",
-    "@rrox/assets": "^1.6.2",
-    "@rrox/base-ui": "^1.6.2",
-    "@rrox/renderer": "^1.13.0",
+    "@rrox/api": "^1.0.0",
+    "@rrox/assets": "^1.0.0",
+    "@rrox/base-ui": "^1.0.0",
+    "@rrox/dll": "^1.0.0",
+    "@rrox/renderer": "^1.0.0",
     "ant-design-draggable-modal": "^1.0.0",
     "antd": "^4.17.2",
     "async-mutex": "^0.3.2",
-    "axios": "^0.24.0",
-    "bezier-js": "^5.1.0",
     "copy-webpack-plugin": "^10.2.1",
+    "deep-diff": "^1.0.2",
+    "deepmerge": "^4.2.2",
     "dll-inject": "^0.0.1",
     "electron-log": "^4.4.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
-    "eventemitter2": "^6.4.5",
     "ffi-napi": "^4.0.3",
-    "form-data": "^4.0.0",
     "fs-extra": "^10.1.0",
     "github-markdown-css": "^5.1.0",
-    "history": "^5.1.0",
     "iohook": "^0.9.3",
-    "keycode": "^2.2.1",
     "node-fetch": "^3.2.3",
-    "path-browserify": "^1.0.1",
-    "quaternion": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^6.0.2",
     "react-router-dom": "^6.0.2",
+    "ref-napi": "^2.0.1",
     "ref-struct-di": "^1.1.1",
+    "reflect-metadata": "^0.1.13",
     "semver": "^7.3.7",
     "socket.io-client": "^4.4.0",
-    "svg-pan-zoom": "^3.6.1",
+    "tar": "^6.1.11",
     "update-electron-app": "^2.0.1"
   }
 }
