--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@rrox/api",
     "private": true,
-    "version": "1.6.2",
+    "version": "1.0.0",
     "description": "RailroadsOnline Extended API",
     "author": "_tom()",
     "main": "src/index.ts",
@@ -11,11 +11,17 @@
     },
     "devDependencies": {
         "@types/deep-diff": "^1.0.1",
-        "typescript": "^4.4.4"
+        "@types/react": "^17.0.39"
     },
     "dependencies": {
+        "antd": "^4.17.2",
+        "conf": "^10.0.3",
         "deep-diff": "^1.0.2",
+        "electron-log": "^4.4.1",
+        "electron-store": "^8.0.1",
+        "eventemitter2": "^6.4.5",
         "react": "^17.0.2",
+        "react-dom": "^17.0.2",
         "reflect-metadata": "^0.1.13",
         "ts-toolbelt": "^9.6.0"
     }
