--- a/packages/base-ui/package.json
+++ b/packages/base-ui/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@rrox/base-ui",
     "private": true,
-    "version": "1.6.2",
+    "version": "1.0.0",
     "description": "RailroadsOnline Extended Base UI",
     "author": "_tom()",
     "main": "src/index.tsx",
@@ -10,18 +10,17 @@
         "url": "https://github.com/tom-90/RROx.git"
     },
     "devDependencies": {
-        "typescript": "^4.4.4",
-        "webpack": "^5.69.1",
-        "webpack-cli": "^4.9.2"
+        "@types/react": "^17.0.39"
     },
     "scripts": {
         "dev": "webpack -c ./configs/webpack.config.js --mode=development --watch"
     },
     "dependencies": {
-        "@rrox/api": "^1.6.2",
+        "@rrox/api": "^1.0.0",
+        "antd": "^4.17.2",
+        "keycode": "^2.2.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
-        "react-router-dom": "^6.0.2",
-        "react-router": "^6.0.2"
+        "react-router-dom": "^6.0.2"
     }
 }
