--- a/packages/renderer/package.json
+++ b/packages/renderer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rrox/renderer",
-  "version": "1.13.0",
+  "version": "1.0.0",
   "description": "RailroadsOnline Extended renderer utilities",
   "author": "_tom()",
   "main": "src/index.ts",
@@ -11,13 +11,23 @@
   },
   "scripts": {},
   "devDependencies": {
-    "@types/deepmerge": "^2.2.0"
+    "@types/deepmerge": "^2.2.0",
+    "@types/semver": "^7.3.9",
+    "@types/path-browserify": "^1.0.0"
   },
   "dependencies": {
-    "@rrox/base-ui": "^1.6.2",
+    "@rrox/api": "^1.0.0",
+    "@rrox/base-ui": "^1.0.0",
+    "antd": "^4.17.2",
     "ajv": "^8.11.0",
     "ajv-formats": "^2.1.1",
     "deepmerge": "^4.2.2",
-    "react-router-dom": "^6.0.2"
+    "electron-log": "^4.4.1",
+    "eventemitter2": "^6.4.5",
+    "json-schema-typed": "^7.0.3",
+    "path-browserify": "^1.0.1",
+    "react": "^17.0.2",
+    "react-router-dom": "^6.0.2",
+    "semver": "^7.3.7"
   }
 }
