--- a/plugins/devtools/package.json
+++ b/plugins/devtools/package.json
@@ -17,26 +17,25 @@
         "type": "git",
         "url": "https://github.com/tom-90/RROx.git"
     },
-    "devDependencies": {
-        "@monaco-editor/react": "^4.3.1",
-        "@rrox/api": "^1.6.2",
-        "@types/react-inspector": "^4.0.2",
-        "console-feed": "^3.3.0",
-        "monaco-editor": "^0.33.0",
-        "react": "^17.0.2",
-        "react-router-dom": "^6.0.2",
-        "react-inspector": "^5.1.1",
-        "typescript": "^4.4.4",
-        "webpack": "^5.69.1"
-    },
     "scripts": {
-        "prepack": " webpack -c ./configs/webpack.config.js --mode=production",
-        "dev": "webpack -c ./configs/webpack.config.js --mode=development --watch",
-        "rrox": "rrox"
+        "build": "rrox clean && rrox build",
+        "prepack": "yarn build",
+        "start": "yarn dev",
+        "dev": "rrox clean && rrox start"
+    },
+    "devDependencies": {
+        "@types/react": "^17.0.39",
+        "@rrox/plugin": "^1.0.0"
     },
     "dependencies": {
-        "@rrox/base-ui": "^1.6.2",
-        "@rrox/plugin": "^1.0.0",
-        "webpack-cli": "^4.9.2"
+        "@ant-design/icons": "^4.7.0",
+        "@monaco-editor/react": "^4.3.1",
+        "@rrox/base-ui": "^1.0.0",
+        "@rrox/api": "^1.0.0",
+        "antd": "^4.17.2",
+        "monaco-editor": "^0.33.0",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-router-dom": "^6.0.2"
     }
 }
