--- a/plugins/world/package.json
+++ b/plugins/world/package.json
@@ -12,26 +12,27 @@
         "url": "https://github.com/tom-90/RROx.git"
     },
     "files": [
-        "dist"
+        "dist",
+        "./controller.d.ts",
+        "./renderer.d.ts",
+        "./shared.d.ts"
     ],
     "publishConfig": {
         "registry": "https://rrox-registry.tom90.nl"
     },
     "devDependencies": {
-        "@monaco-editor/react": "^4.3.1",
-        "@rrox/api": "^1.6.2",
-        "@types/react-inspector": "^4.0.2",
-        "console-feed": "^3.3.0",
-        "monaco-editor": "^0.33.0",
-        "react": "^17.0.2",
-        "react-inspector": "^5.1.1",
-        "typescript": "^4.4.4",
-        "webpack": "^5.69.1",
-        "webpack-cli": "^4.9.2"
+        "@rrox/plugin": "^1.0.0",
+        "@types/react": "^17.0.39"
     },
     "scripts": {
-        "prepack": "rm -rf dist && webpack -c ./configs/webpack.config.js --mode=production",
-        "dev": "webpack -c ./configs/webpack.config.js --mode=development --watch"
+        "build": "rrox clean && rrox build",
+        "prepack": "yarn build",
+        "start": "yarn dev",
+        "dev": "rrox clean && rrox start"
     },
-    "dependencies": {}
+    "dependencies": {
+        "@rrox/api": "^1.0.0",
+        "antd": "^4.17.2",
+        "react": "^17.0.2"
+    }
 }
