--- a/plugins/world/tsconfig.json
+++ b/plugins/world/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "jsx": "react",
+    "declaration": true,
     "allowJs": true,
     "target": "ES6",
     "module": "ESNext",
