--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@rrox/server",
   "version": "1.0.0",
+  "private": true,
   "description": "Server for RROx",
   "main": "dist/index.js",
   "license": "MIT",
