--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "scripts": {
         "postinstall": "patch-package"
     },
-     "devDependencies": {
+    "devDependencies": {
+        "lerna": "^4.0.0",
         "patch-package": "^6.4.7",
         "postinstall-postinstall": "^2.1.0"
     }
