--- a/packages/generator-plugin/package.json
+++ b/packages/generator-plugin/package.json
@@ -4,6 +4,7 @@
   "description": "Yeoman generator for RROx plugins",
   "author": "_tom()",
   "license": "MIT",
+  "homepage": "https://rrox-docs.tom90.nl",
   "repository": {
     "type": "git",
     "url": "https://github.com/tom-90/RROx.git"
