--- a/packages/registry-auth/package.json
+++ b/packages/registry-auth/package.json
@@ -1,6 +1,7 @@
 {
   "$schema": "http://json.schemastore.org/package",
   "name": "@rrox/registry-auth",
+  "private": true,
   "version": "1.0.0",
   "license": "MIT",
   "main": "dist/server/index.js",
