--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -1,6 +1,7 @@
 {
     "name": "@rrox/web",
     "version": "1.0.0",
+    "private": true,
     "description": "RailroadsOnline Extended web components",
     "author": "_tom()",
     "license": "MIT",
