--- a/packages/api/tsconfig.json
+++ b/packages/api/tsconfig.json
@@ -4,6 +4,7 @@
     "allowJs": true,
     "target": "ES6",
     "module": "ESNext",
+    "declaration": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
     "noImplicitAny": true,
