--- a/packages/base-ui/package.json
+++ b/packages/base-ui/package.json
@@ -4,7 +4,8 @@
     "description": "RailroadsOnline Extended Base UI",
     "license": "MIT",
     "author": "_tom()",
-    "main": "src/index.tsx",
+    "main": "dist/index.js",
+    "types": "dist/index.d.ts",
     "files": [
         "src",
         "tsconfig.json"
@@ -14,6 +15,10 @@
         "type": "git",
         "url": "https://github.com/tom-90/RROx.git"
     },
+    "scripts": {
+        "build": "cross-env NODE_ENV=production rimraf dist && tsc",
+        "prepack": "yarn build"
+    }, 
     "devDependencies": {
         "@types/react": "^17.0.39"
     },
