Improved plugin generator

--- a/packages/base-ui/package.json
+++ b/packages/base-ui/package.json
@@ -17,10 +17,12 @@
     },
     "scripts": {
         "build": "cross-env NODE_ENV=production rimraf dist && tsc",
-        "prepack": "yarn build"
-    }, 
+        "prepack": "yarn build",
+        "postbuild": "copyfiles --exclude src/**/*.{ts,tsx} -u 1 src/**/* dist"
+    },
     "devDependencies": {
-        "@types/react": "^17.0.39"
+        "@types/react": "^17.0.39",
+        "copyfiles": "^2.4.1"
     },
     "dependencies": {
         "@rrox/api": "^1.0.1",
