--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,7 +8,7 @@ jobs:
 
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
+        os: [windows-latest]
 
     steps:
       - name: Check out Git repository
@@ -18,15 +18,19 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16
+          cache: 'yarn'
+        
+      - name: Setup msbuild
+        uses: microsoft/setup-msbuild@v1.1
+      
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
-      - name: Build/release Electron app
-        uses: samuelmeuli/action-electron-builder@v1
+      - name: Build packages & plugins
+        run: yarn lerna run build
+
+      - name: Save Electron Build
+        uses: actions/upload-artifact@v3
         with:
-          # GitHub token, automatically provided to the action
-          # (No need to define this secret in the repo settings)
-          github_token: ${{ secrets.github_token }}
-
-          # If the commit is tagged with a version (e.g. "v1.0.0"),
-          # release the app after building
-          release: ${{ startsWith(github.ref, 'refs/tags/v') }}
-          package_root: './packages/electron'
+          name: electron-build
+          path: packages/electron/out
