--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,16 @@ jobs:
         uses: actions/checkout@v1
 
       - name: Install Node.js, NPM and Yarn
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: 16
           cache: 'yarn'
         
       - name: Setup msbuild
         uses: microsoft/setup-msbuild@v1.1
+
+      - name: Setup node-gyp
+        run: npm install -g node-gyp && node-gyp configure
       
       - name: Install dependencies
         run: yarn install --frozen-lockfile
