--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,11 @@ jobs:
 
       - name: Setup node-gyp
         run: npm install -g node-gyp && node-gyp install
+        
+      - name: Setup Wix Toolset
+        env:
+          WIX_PATH: ${{ env.wix }}
+        run: echo "$env:WIX_PATH\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
       
       - name: Install dependencies
         run: yarn install --frozen-lockfile
