--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,9 +27,8 @@ jobs:
         run: npm install -g node-gyp && node-gyp install
         
       - name: Setup Wix Toolset
-        env:
-          WIX_PATH: ${{ env.wix }}
-        run: echo "$env:WIX_PATH\bin" | Out-File -FilePath $env:GITHUB_PATH -Encoding utf8 -Append
+        run: echo "C:\Program Files (x86)\WiX Toolset v3.11\bin" >> $GITHUB_PATH
+        shell: bash
       
       - name: Install dependencies
         run: yarn install --frozen-lockfile
