--- a/plugins/world/package.json
+++ b/plugins/world/package.json
@@ -1,8 +1,11 @@
 {
     "name": "@rrox-plugins/world",
-    "version": "1.0.4",
+    "version": "1.0.5",
     "description": "World Loader Plugin",
     "author": "_tom()",
+    "contributors": [
+        "Mordred"
+    ],
     "rrox": {
         "controller": "dist/controller/controller.js",
         "renderer": "dist/renderer/renderer.js"
