--- a/packages/registry-auth/package.json
+++ b/packages/registry-auth/package.json
@@ -65,7 +65,7 @@
     "verdaccio": ">=5"
   },
   "engines": {
-    "node": "^14||^16||^18"
+    "node": "^14||^16||^18||^19"
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org/"
